--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 			</div>
 			<nav id="home-nav" class="site-nav">
 				<a href="https://sekhet-aaru.github.io/about/">About</a>
-				<a href="https://impostorsyndrome.blog.fc2.com/?tag=Template">Themes</a>
+				<a href="https://sekhet-aaru.github.io/artwork/">Artwork</a>
+				<a href="https://sekhet-aaru.github.io/theme/">Theme</a>
 				<a href="https://sekhet-aaru.github.io/sources/">Egyptology</a>
 			</nav>
 		</div>
@@ -58,6 +59,7 @@
 
 	<script src="https://sekhet-aaru.github.io/js/main.min.8f39f24808e9d0a9b02da58c2d2838da859dc0b7bdfadbdb1883aae8b6adacfe.js" integrity="sha256-jznySAjp0KmwLaWMLSg42oWdwLe9+tvbGIOq6LatrP4="></script>
 
+	
 </body>
 
 </html>
