--- a/sources/index.html
+++ b/sources/index.html
@@ -40,7 +40,8 @@
 				</div>
 				<nav class="site-nav hide-in-mobile">
 					<a href="https://sekhet-aaru.github.io/about/">About</a>
-					<a href="https://impostorsyndrome.blog.fc2.com/?tag=Template">Themes</a>
+					<a href="https://sekhet-aaru.github.io/artwork/">Artwork</a>
+					<a href="https://sekhet-aaru.github.io/theme/">Theme</a>
 					<a href="https://sekhet-aaru.github.io/sources/">Egyptology</a>
 				</nav>
 			</div>
@@ -52,7 +53,8 @@
 	<div id="mobile-menu" class="animated fast">
 		<ul>
 			<li><a href="https://sekhet-aaru.github.io/about/">About</a></li>
-			<li><a href="https://impostorsyndrome.blog.fc2.com/?tag=Template">Themes</a></li>
+			<li><a href="https://sekhet-aaru.github.io/artwork/">Artwork</a></li>
+			<li><a href="https://sekhet-aaru.github.io/theme/">Theme</a></li>
 			<li><a href="https://sekhet-aaru.github.io/sources/">Egyptology</a></li>
 		</ul>
 	</div>
@@ -76,13 +78,14 @@
 	<footer id="site-footer" class="section-inner thin animated fadeIn faster">
 		<p>&copy; 2019 <a href="https://sekhet-aaru.github.io/">lanee</a></p>
 		<p>
-			Made with <a href="https://gohugo.io/" target="_blank" rel="noopener">Hugo</a> &#183; Theme <a href="https://github.com/Track3/hermit" target="_blank" rel="noopener">Hermit</a> &#183; <a href="https://sekhet-aaru.github.io/posts/index.xml" target="_blank" title="rss"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-rss"><path d="M4 11a9 9 0 0 1 9 9"></path><path d="M4 4a16 16 0 0 1 16 16"></path><circle cx="5" cy="19" r="1"></circle></svg></a>
+			Made with <a href="https://gohugo.io/" target="_blank" rel="noopener">Hugo</a> &#183; Theme based on <a href="https://github.com/Track3/hermit" target="_blank" rel="noopener">Hermit</a> & <a href="https://github.com/victoriadotdev/hugo-theme-sam" target="_blank" rel="noopener">Sam</a> &#183; <a href="https://sekhet-aaru.github.io/posts/index.xml" target="_blank" title="rss"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-rss"><path d="M4 11a9 9 0 0 1 9 9"></path><path d="M4 4a16 16 0 0 1 16 16"></path><circle cx="5" cy="19" r="1"></circle></svg></a>
 		</p>
 	</footer>
 
 
 	<script src="https://sekhet-aaru.github.io/js/main.min.8f39f24808e9d0a9b02da58c2d2838da859dc0b7bdfadbdb1883aae8b6adacfe.js" integrity="sha256-jznySAjp0KmwLaWMLSg42oWdwLe9+tvbGIOq6LatrP4="></script>
 
+	
 </body>
 
 </html>
