--- a/about/index.html
+++ b/about/index.html
@@ -47,9 +47,11 @@
 				</div>
 				<nav class="site-nav hide-in-mobile">
 					<a href="https://sekhet-aaru.github.io/about/">About</a>
+					<a href="https://archiveofourown.org/users/laneenal/works">Writing</a>
 					<a href="https://sekhet-aaru.github.io/artwork/">Artwork</a>
 					<a href="https://sekhet-aaru.github.io/theme/">Theme</a>
 					<a href="https://sekhet-aaru.github.io/sources/">Egyptology</a>
+					<a href="https://tabularasa.data.blog/">Tabula Rasa</a>
 				</nav>
 			</div>
 			<div class="hdr-right hdr-icons">
@@ -60,9 +62,11 @@
 	<div id="mobile-menu" class="animated fast">
 		<ul>
 			<li><a href="https://sekhet-aaru.github.io/about/">About</a></li>
+			<li><a href="https://archiveofourown.org/users/laneenal/works">Writing</a></li>
 			<li><a href="https://sekhet-aaru.github.io/artwork/">Artwork</a></li>
 			<li><a href="https://sekhet-aaru.github.io/theme/">Theme</a></li>
 			<li><a href="https://sekhet-aaru.github.io/sources/">Egyptology</a></li>
+			<li><a href="https://tabularasa.data.blog/">Tabula Rasa</a></li>
 		</ul>
 	</div>
 
