--- a/index.html
+++ b/index.html
@@ -45,9 +45,11 @@
 			</div>
 			<nav id="home-nav" class="site-nav">
 				<a href="https://sekhet-aaru.github.io/about/">About</a>
+				<a href="https://archiveofourown.org/users/laneenal/works">Writing</a>
 				<a href="https://sekhet-aaru.github.io/artwork/">Artwork</a>
 				<a href="https://sekhet-aaru.github.io/theme/">Theme</a>
 				<a href="https://sekhet-aaru.github.io/sources/">Egyptology</a>
+				<a href="https://tabularasa.data.blog/">Tabula Rasa</a>
 			</nav>
 		</div>
 		<div id="home-footer">
