--- a/translation/index.html
+++ b/translation/index.html
@@ -6,11 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta itemprop="name" content="Translation">
-<meta itemprop="description" content="英→中： 视频类 日→中： 视频类 文字类">
+<meta itemprop="description" content="英→中： 视频类 《游☆戏☆王》 日→中： 视频类 文字类">
 
-<meta itemprop="wordCount" content="17">
+<meta itemprop="wordCount" content="24">
 <meta itemprop="keywords" content="" /><meta property="og:title" content="Translation" />
-<meta property="og:description" content="英→中： 视频类 日→中： 视频类 文字类" />
+<meta property="og:description" content="英→中： 视频类 《游☆戏☆王》 日→中： 视频类 文字类" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://aaru.alltale.cyou/translation/" /><meta property="article:section" content="" />
 
@@ -18,7 +18,7 @@
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Translation"/>
-<meta name="twitter:description" content="英→中： 视频类 日→中： 视频类 文字类"/>
+<meta name="twitter:description" content="英→中： 视频类 《游☆戏☆王》 日→中： 视频类 文字类"/>
 
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -71,6 +71,7 @@
 <p>英→中：</p>
 <ul>
 <li><a href="https://space.bilibili.com/245375/channel/seriesdetail?sid=272068">视频类</a></li>
+<li>《游☆戏☆王》</li>
 </ul>
 </li>
 <li>
