fix main margin

--- a/translation/index.html
+++ b/translation/index.html
@@ -6,11 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta itemprop="name" content="Translation">
-<meta itemprop="description" content="英→中： 视频类 《游☆戏☆王》 日→中： 视频类 文字类">
+<meta itemprop="description" content="英→中： 视频类 日→中： 视频类 文字类">
 
-<meta itemprop="wordCount" content="24">
+<meta itemprop="wordCount" content="17">
 <meta itemprop="keywords" content="" /><meta property="og:title" content="Translation" />
-<meta property="og:description" content="英→中： 视频类 《游☆戏☆王》 日→中： 视频类 文字类" />
+<meta property="og:description" content="英→中： 视频类 日→中： 视频类 文字类" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://aaru.alltale.cyou/translation/" /><meta property="article:section" content="" />
 
@@ -18,7 +18,7 @@
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Translation"/>
-<meta name="twitter:description" content="英→中： 视频类 《游☆戏☆王》 日→中： 视频类 文字类"/>
+<meta name="twitter:description" content="英→中： 视频类 日→中： 视频类 文字类"/>
 
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -28,7 +28,7 @@
 	<link rel="shortcut icon" href="/favicon.ico">
 
 	<title>Translation</title>
-	<link rel="stylesheet" href="https://aaru.alltale.cyou/css/style.min.6fd50c889142992cb71cc9c580661552f3cfa9aeae0483c1134fffa1333246f3.css" integrity="sha256-b9UMiJFCmSy3HMnFgGYVUvPPqa6uBIPBE0//oTMyRvM=">
+	<link rel="stylesheet" href="https://aaru.alltale.cyou/css/style.min.6784217f808ddbf97e43c42a621b3b10b26e6cd624cbd6f3799c99c842860ae1.css" integrity="sha256-Z4Qhf4CN2/l+Q8QqYhs7ELJubNYky9bzeZyZyEKGCuE=">
 	
 	<link rel="stylesheet" href="https://aaru.alltale.cyou/css/custom.css">
 </head>
@@ -66,12 +66,20 @@
 	<main class="site-main section-inner thin animated fadeIn faster">
 		<h1>Translation</h1>
 		<div class="content">
-			<ul>
+			<!-- - 2011-2013：《卡片战斗先导者》
+- 2014：《幽丽塔》
+- 2015：《游戏王TFSP》
+- 2015-：美版剧场版《光之金字塔》《超融合》《次元的黑暗面》，《游戏王真决斗怪兽》系列，
+- FNAF
+  - 《佐藤雅史的完全彻底游戏王》1/3/5/6/14/15/26/29/30
+  - 《HELLO(恋爱喜剧)WORLD》8/最终话
+  - 《SECRET REVERSE》前/后篇 -->
+<!---->
+<ul>
 <li>
 <p>英→中：</p>
 <ul>
 <li><a href="https://space.bilibili.com/245375/channel/seriesdetail?sid=272068">视频类</a></li>
-<li>《游☆戏☆王》</li>
 </ul>
 </li>
 <li>
